fixed firefox logo overflow

--- a/mysite/assets/scss/modules/header/_logo.scss
+++ b/mysite/assets/scss/modules/header/_logo.scss
@@ -20,6 +20,7 @@
   }
   svg {
     width: $mobile-logo-width;
+    overflow: visible !important;
     
     @include desktop-header {
       width: $desktop-logo-width;
