--- a/mysite/assets/scss/variables/_base.scss
+++ b/mysite/assets/scss/variables/_base.scss
@@ -14,7 +14,7 @@ $mobile-menu-item-padding: 20px;
 $mobile-menu-item-height: 60px;
 
 $mini-mobile-logo-width: 47px;
-$mobile-logo-width: 139px;
+$mobile-logo-width: 135px;
 $desktop-logo-width: 140px;
 $expanded-logo-width: 155px;
 
